[gd_scene load_steps=8 format=3 uid="uid://ovtijnj1jcf6"]

[ext_resource type="Texture2D" uid="uid://bji4vpt2ovymc" path="res://Сцени/каб_информатики.png" id="1_hbh3e"]
[ext_resource type="Script" uid="uid://cem3fg48gcuhq" path="res://modal_dialog454.gd" id="2_uvu0g"]
[ext_resource type="Script" uid="uid://cdym7vtw7e2q" path="res://dialog_managerеке.gd" id="3_33448"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hbh3e"]
bg_color = Color(0.34901962, 0.68235296, 0.47843137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvu0g"]
bg_color = Color(0.34901962, 0.68235296, 0.47843137, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_33448"]
bg_color = Color(0.35010967, 0.6814023, 0.48005718, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o8iw"]
bg_color = Color(0.34901962, 0.68235296, 0.47843137, 1)

[node name="каб_информатики" type="Node2D"]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(634.5, 364.91873)
scale = Vector2(1.0838361, 0.90884596)
texture = ExtResource("1_hbh3e")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ModalDialog" type="Control" parent="UI/HUD"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_uvu0g")

[node name="Panel" type="Panel" parent="UI/HUD/ModalDialog"]
layout_mode = 0
offset_left = 32.0
offset_top = 24.0
offset_right = 1207.0
offset_bottom = 694.0

[node name="LabelText" type="Label" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 0.034
offset_left = 34.0
offset_top = 41.0
offset_right = 968.75
offset_bottom = 271.22
theme_override_font_sizes/font_size = 35
text = "кенке"

[node name="CodeInput" type="LineEdit" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 0
offset_left = 57.0
offset_top = 422.0
offset_right = 1092.0
offset_bottom = 502.0

[node name="Btn1" type="Button" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 0
offset_left = 48.0
offset_top = 532.0
offset_right = 574.0
offset_bottom = 633.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_hbh3e")
text = "ьлододлол"

[node name="Btn2" type="Button" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 0
offset_left = 632.0
offset_top = 533.0
offset_right = 1099.0
offset_bottom = 630.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_uvu0g")
text = "лроюблрюдд"

[node name="Btn3" type="Button" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 0
offset_left = 50.0
offset_top = 414.0
offset_right = 574.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_33448")
text = "лжзщдлэжд"

[node name="Btn4" type="Button" parent="UI/HUD/ModalDialog/Panel"]
layout_mode = 0
offset_left = 632.0
offset_top = 410.0
offset_right = 1101.0
offset_bottom = 500.0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_0o8iw")
text = "ждошорджло"

[node name="DialogManager" type="Node" parent="UI/HUD"]
script = ExtResource("3_33448")
